ff-macros/tests/object_failures/invalid_input.rs
use ff_macros::*;

#[derive(Object)]
enum Test {}

fn main() {}